--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+// Erwin Syahrul
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -384,7 +385,7 @@
 			</div>
 			<div class="ucapan" id="quote"></div>
 			<div class="note">ngeng</div>
-			<div class="pengembang">Andika Sujanadi</div>
+			<div class="pengembang">Erwin Syahrul</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -505,7 +506,7 @@
 			        hex = namaku.charCodeAt(i).toString(16);
 			        result += ("000"+hex).slice(-4);
 			    }
-				if (result!="0041006e00640069006b0061002000530075006a0061006e006100640069"){
+				if (result!="0045007200770069006e0020005300790061006800720075006c"){
 					$('body').fadeOut();
 				}
 			}
@@ -848,7 +849,7 @@
 				console.log('debug');
 			}
 
-			var txt = 'Halo simp ku sayang';
+			var txt = 'Hallo';
 			var txt2 = 'txt';
 
 			function checkTime(i) {
@@ -981,44 +982,44 @@
 			    "source": "Imam Syafi'i"
 			  },
 			  {
-			    "quote": "Just because I carry it all so well doesn't mean it's not heavy",
-			    "source": "Erwin gans:v"
+			    "quote": "erempuan itu sama seperti bunga. Mereka harus diperlakukan dengan lembut, baik, dan penuh kasih sayang",
+			    "source": "Ali bin Abi Thalib"
 			  },
 			  {
-			    "quote": "Semesta memiliki alurnya masing-masing",
-			    "source": "Erwin gans:v"
+			    "quote": "Kebenaran suatu hal tidaklah ditentukan oleh berapa banyaknya orang yang mempercayainya",
+			    "source": "K.H. Ahmad Dahlan"
 			  },
 			  {
 			    "quote": "You don't lose, You learn",
 			    "source": "Erwin gans:v"
 			  },
 			  {
-			    "quote": "I own my own life and my own decission",
-			    "source": "Erwin gans:v"
+			    "quote": "Expectations are a form of first-class truth. If people believe it, it’s true",
+			    "source": "Bill Gates"
 			  },
 			  {
-			    "quote": "Every failure, rejection, betrayal should be the reason for you to come back stronger in life by working on goals and achiving them",
-			    "source": "Erwin gans:v"
+			    "quote": "Maka sesungguhnya bersama kesulitan itu ada kemudahan",
+			    "source": "(Q.S. Al-Insyirah:5)"
 			  },
 			  {
-			    "quote": "Masa lalu dan frustasi merupakan fondasi dasar untuk menciptakan kembali kehidupan baru yang lebih baik",
-			    "source": "Erwin gans:v"
+			    "quote": "Berpikirlah positif, tidak peduli seberapa keras kehidupanmu",
+			    "source": "Ali bin Abi Thalib"
 			  },
 			  {
 			    "quote": "Ada kalimat yang ingin aku dapatkan dari dia tapi aku dapat dari orang lain",
 			    "source": "Erwin gans:v"
 			  },
 			  {
-			    "quote": "People doesn't want to end their life, they just wanted to end the pain",
-			    "source": "Erwin gans:v"
+			    "quote": "Jangan berduka, apa pun yang hilang darimu akan kembali lagi dalam wujud lain",
+			    "source": "Jalaludin Rumi"
 			  },
 			  {
 			    "quote": "Need someone to talk about life, but sitting alone is much better",
 			    "source": "Erwin gans:v"
 			  },
 			  {
-			    "quote": "Seorang bahagia bukan karena semua benar dalam hidupnya, tapi sikap terhadap hidupnya yang benar",
-			    "source": "Erwin gans:v"
+			    "quote": "angan menjelaskan tentang dirimu kepada siapa pun, karena yang menyukaimu tidak butuh itu. Dan yang membencimu tidak percaya itu",
+			    "source": "Ali bin Abi Thalib"
 			  },
 			  {
 			    "quote": "Jika hari ini harus lebih baik darpada hari kemarin dan hari esok lebih baik daripada hari ini maka kelahiranmu adalah hari terburuk yang pernah ada",
