--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
 			    "source": "Imam Syafi'i"
 			  },
 			  {
-			    "quote": "erempuan itu sama seperti bunga. Mereka harus diperlakukan dengan lembut, baik, dan penuh kasih sayang",
+			    "quote": "Perempuan itu sama seperti bunga. Mereka harus diperlakukan dengan lembut, baik, dan penuh kasih sayang",
 			    "source": "Ali bin Abi Thalib"
 			  },
 			  {
@@ -1018,7 +1018,7 @@
 			    "source": "Erwin gans:v"
 			  },
 			  {
-			    "quote": "angan menjelaskan tentang dirimu kepada siapa pun, karena yang menyukaimu tidak butuh itu. Dan yang membencimu tidak percaya itu",
+			    "quote": "Jangan menjelaskan tentang dirimu kepada siapa pun, karena yang menyukaimu tidak butuh itu. Dan yang membencimu tidak percaya itu",
 			    "source": "Ali bin Abi Thalib"
 			  },
 			  {
